# andesrobot-ihr

./: .gitignore  README.md  ask_run.sh  ask_test.sh  awake.sh  findperson_run.sh  findperson_test.sh  receptionist.xml  setup.sh  setup_compile.sh  talk_run.sh  talk_test.sh
btcpp_sample/: CMakeLists.txt  main.cpp  package.xml  run.sh  setup_compile.sh  tree.xml
btcpp_sample/install/: local_setup.sh  setup.sh
btcpp_sample/install/btcpp_sample/share/btcpp_sample/: package.bash  package.zsh
btcpp_sample/log/: latest_build  latest_test
nlp/: MainSTT.py  MainTTS.py  config_audio.sh  setup.sh
nlp/src/nlp_interfaces/: CMakeLists.txt  package.xml
nlp/src/talk_action/: setup.py
nlp/src/talk_action/talk_action/: talk_action_server.py
receptionist/: CMakeLists.txt  main.cpp  package.xml  say.cpp  setup_compile.sh
receptionist/receptionist/: CMakeLists.txt  MoveTo.cpp  MoveTo.hpp  Remember.cpp  See.cpp  See.hpp  Talk.cpp  main.cpp  receptionist.xml  say.cpp  say.hpp
receptionist/src/: create.sh  create_cpp.sh  create_cpp_action.sh
receptionist/src/ask_action/: package.xml  setup.cfg  setup.py
receptionist/src/ask_action/ask_action/: ask_node.py
receptionist/src/findperson_action/: CMakeLists.txt  package.xml
receptionist/src/findperson_action/src/: findperson_action_server.cpp  findpersonaction_server.cpp
receptionist/src/ireceptionist/: Ask.cpp  Ask.hpp  CMakeLists.txt  CheckNode.cpp  CheckNode.hpp  CheckNodes.cpp  CheckNodes.hpp  MoveTo.hpp  Remember.cpp  Remember.hpp  See.cpp  See.hpp  Talk.cpp  Talk.hpp  main.cpp  package.xml
receptionist/src/nlp_interfaces/: CMakeLists.txt  package.xml
receptionist/src/nlp_interfaces/action/: Ask.action
receptionist/src/receptionist/: ActionClient.cpp  ActionClient.hpp  CMakeLists.txt  MoveTo.cpp  Remember.hpp  Talk.cpp  Talk.hpp  main.cpp  package.xml  receptionist.xml
receptionist/src/talk_action/: package.xml  setup.cfg
receptionist/src/talk_action/talk_action/: talk_action_server.py
receptionist/src/vision_interfaces/: CMakeLists.txt  package.xml
receptionist/src/vision_interfaces/action/: FindPerson.action
talk_action/: talk_action_server.py
talk_action/interfaces/action/: Talk.action
vision/: README.MD  TODO.MD  compile.sh  error  test  test.cpp  test.py  yunet  yunet.cpp
