<package format="3">
  <name>receptionist</name>
  <version>0.1.0</version>
  <description>Receptionist RoboCup 2026</description>

  <maintainer email="andesrobot@todo.com">AndesRobot Team</maintainer>
  <license>MIT</license>
  <author>AndesRobot Team</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
